[package]
name = "m_example_plugin"
version = "5.11.4"
edition = "2021"
publish = false

[lib]
name = "m_example_plugin"
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = true
lto = true

[dependencies]
anyhow = "1.0"
memprocfs = "*"
# memprocfs = { path = "../memprocfs" }
